// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should apply layout with async option 1`] = `
"<!doctype html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"UTF-8\\" />
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
    <title>{matter.title}</title>
  </head>
  <body>
    <h1>Content</h1>
<p>This is the main content of your Markdown file autored by <strong>John Doe</strong> at <strong>Sep 2023</strong>.</p>

  </body>
</html>
"
`;

exports[`should apply layout with custom options 1`] = `
"<!doctype html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"UTF-8\\" />
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
    <title>{matter.title}</title>
  </head>
  <body>
    <h1>Content</h1>
<p>This is the main content of your Markdown file autored by <strong>John Doe</strong> at <strong>Sep 2023</strong>.</p>

  </body>
</html>
"
`;

exports[`should apply layout with interpolation 1`] = `
"<!doctype html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"UTF-8\\" />
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
    <title>Marked hook layout</title>
  </head>
  <body>
    <h1>Content</h1>
<p>This is the main content of your Markdown file autored by <strong>John Doe</strong> at <strong>Sep 2023</strong>.</p>

  </body>
</html>
"
`;

exports[`should apply layout without interpolation 1`] = `
"<!doctype html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"UTF-8\\" />
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
    <title>{matter.title}</title>
  </head>
  <body>
    <h1>Content</h1>
<p>This is the main content of your Markdown file autored by <strong>John Doe</strong> at <strong>Sep 2023</strong>.</p>

  </body>
</html>
"
`;

exports[`should work well with data and frontmatter hook 1`] = `
"<!doctype html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"UTF-8\\" />
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
    <title>Marked hook layout</title>
  </head>
  <body>
    <h1>Marked hook layout</h1>
<p>By John Doe on Sep 2023</p>

  </body>
</html>
"
`;

exports[`should work well with frontmatter hook 1`] = `
"<!doctype html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"UTF-8\\" />
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
    <title>Marked hook layout</title>
  </head>
  <body>
    <h1>{matter.title}</h1>
<p>By {matter.author} on {matter.date}</p>

  </body>
</html>
"
`;
